--- a/css/content.css
+++ b/css/content.css
@@ -134,16 +134,15 @@
 .tab-container.sub .tab-content{display:none; min-height:30rem;}
 .tab-container.sub .tab-content.is-active{display:block;}
 .tab-container.sub .tab-content p{font-size:1.8rem;}
-.tab-container.sub .tab-content .info-txt{font-weight:500; line-height:160%;}
-.tab-container.sub .tab-content .info-txt + .acco-wrap{margin-top:3.6rem;}
-.tab-container.sub.has-img{background:url(/images/common/icon_tab_gril.webp) right top 1.3rem / 32.3rem 26.4rem no-repeat;}
+.tab-container.sub .tab-content .info-txt{min-height:13rem; margin-bottom:5rem; font-weight:500; line-height:160%;}
+.tab-container.sub.has-img{background:url(../images/common/img_AI.webp) right top / 32.7rem 30.9rem no-repeat;}
 .tab-container.sub.has-img .tab-head{width:65%;}
 .acco-wrap .list li{position:relative; background:#fff; border-radius:2rem;}
 .acco-wrap .list li + li{margin-top:1rem;}
-.acco-wrap .list li > .btn-acco{display:flex; gap:2.7rem; align-items:center; width:100%; padding:3rem 4rem;}
+.acco-wrap .list li > .btn-acco{display:flex; gap:2.7rem; align-items:center; position:relative; width:100%; padding:3rem 4rem;}
 .acco-wrap .list li .badge{display:inline-block; height:3.6rem; padding:.2rem 1.8rem; color:#fff; font-weight:500; line-height:160%; font-size:2rem; background:#9C9C9C; border-radius:1.8rem;}
 .acco-wrap .list li .tit{font-weight:700; line-height:160%; font-size:2.4rem;}
-.acco-wrap .list li .icon-arrow{display:inline-block; position:absolute; top:4.9rem; right:4rem;  width:2rem; height:1.2rem; background:url(../images/common/icon_bbs_arrow.svg) center center / 100% no-repeat;}
+.acco-wrap .list li .icon-arrow{display:inline-block; position:absolute; top:50%; right:4rem;  width:2rem; height:1.2rem; margin-top:-.6rem; background:url(../images/common/icon_bbs_arrow.svg) center center / 100% no-repeat;}
 .acco-wrap .list-answer{display:none; padding:0 4rem 7rem;}
 .bg-box{display:flex; gap:8rem; align-items:center; padding:2.7rem 5rem; background:rgba(227, 229, 234, 0.5); border-radius:1rem;}
 .bg-box dt{color:#009BB4; font-weight:700; font-size:2rem;}
@@ -241,9 +240,40 @@
 .card.video .bbs-view .contents .video{width:72rem; height:48rem; margin:0 auto;}
 .card.video .bbs-view .contents .video > *{display:block; width:100%; height:100%;}
 
+.wh-box{padding:4rem 4rem 3.3rem; background:#fff; border-radius:2rem;}
+.wh-box p{line-height:160%;}
+
+.round-box{display:flex; gap:2rem;}
+.round-box li{overflow:hidden; width:50%; background:#fff; border-radius:2rem;}
+.round-box .tit-grp{display:flex; flex-direction:column; width:100%; align-items:center; padding:2.6rem 3rem; color:#fff; background:#003B90; border-radius:2rem 2rem 0 0;}
+.round-box .tit-grp > .txt-sec{display:inline-block; margin-bottom:1rem; font-weight:700; font-size:1.6rem; text-align:center;}
+.round-box .tit-grp b{font-size:2.4rem;}
+.round-box .txt-grp{padding:3rem 4rem;}
+.round-box .txt-grp dl dt{color:#009BB4; font-weight:700; font-size:1.4rem;}
+.round-box .txt-grp dl dt + dd{margin-top:1rem;}
+.round-box .txt-grp dl dd{font-weight:400; font-size:1.8rem;}
+.round-box .txt-grp dl dd + dt{margin-top:2rem;}
+
+.img-frame{display:block; max-width:100%; margin:0 auto;}
+.img-frame img{display:block; width:100%;}
+.img-frame.practice{width:96rem; aspect-ratio:960 / 624;}
+.img-frame + .inner{margin-top:8rem;}
+
+.box-list.emergency{gap:2rem;}
+.box-list.emergency li{padding:4rem 0; background:#fff; border-radius:2rem;}
+.box-list.emergency li img{display:block; width:7rem; height:7rem; margin:0 auto;}
+.box-list.emergency li img + .txt{margin-top:2.7rem;}
+.box-list.emergency li .txt{display:block; width:100%; font-weight:500; line-height:140%; font-size:1.8rem; text-align:center;}
+
+/* title */
+.h3-title{position:relative; margin-bottom:2.5rem; font-weight:700; font-size:3rem;}
+.h3-title .icon-h3{position:relative; top:-1.2rem; width:1.2rem; height:1.4rem; margin-right:.9rem;}
+
 /* etc */
 .bullet{position:relative; padding-left:1.5rem;}
-.bullet::before{content:''; display:inline-block; position:absolute; top:1.4rem; left:0; width:.5rem; height:.5rem; background:#000; border-radius:50%;}
+.bullet::before{content:''; display:inline-block; position:absolute; top:1.1rem; left:0; width:.5rem; height:.5rem; background:#000; border-radius:50%;}
+.fwb{font-weight:700 !important;}
+.txt-sec{color:#009BB4;}
 
 @media(max-width:1400px){
 
@@ -291,6 +321,11 @@
 
     .card .bbs-gen-list li{width:calc(100% / 2 - 2rem * 3 / 4);}
 
+    .tab-container.sub.has-img{background:none;}
+    .tab-container.sub.has-img .tab-head{gap:2rem; overflow:auto; width:100%;}
+    .tab-container.sub.has-img .tab-head > li{flex:0 0 auto;}
+    .tab-container.sub.has-img .tab-head::-webkit-scrollbar{display:none;}
+    .tab-container.sub .tab-head .tab-menu.is-active::after, .tab-container.sub .tab-head .tab-menu::after{bottom:-.1rem;}
 
 }
 
