--- a/css/common.css
+++ b/css/common.css
@@ -27,27 +27,29 @@ select.ipt02{background:url(../images/common/icon_select_down.svg) right top .6r
 
 
 .gnb{display:flex; align-items:center; width:100%;}
-.gnb > li{flex-grow:1; font-weight:600; font-size:var(--font-size-20);}
-.gnb > li > a{position:relative; transition:all .3s ease;}
-.gnb > li > a::after{content:''; display:inline-block; position:absolute; width:0; height:.8rem; bottom:0; background:#62C0B4; transition:all .3s ease;}
+.gnb.active::before{content:''; display:inline-block; position:absolute; top:12rem; left:0; width:100%; height:43rem; background:#fff;}
+.gnb > li{flex-grow:1; position:relative; font-weight:600; font-size:var(--font-size-20);}
+.gnb > li > a{position:relative; transition:all .3s ease; border-bottom:.1rem solid #eee;}
+.gnb > li > a::after{content:''; display:inline-block; position:absolute; width:0; height:.8rem; left:50%; bottom:0; background:#62C0B4; transform:translateX(-50%); transition:all .3s ease;}
 .gnb > li:hover > a::after{width:100%;}
-.gnb > li a, .gnb > li .tit{display:inline-flex; justify-content:center; align-items:center; padding:0 3.5rem 1rem; width:100%; height:6.5rem; font-size:inherit; text-align:center;}
-.gnb > li:first-child a{padding-left:0;}
-.gnb > li:last-child a{padding-right:0;}
-.gnb .gnb-depth2{display:none; position:absolute; top:12rem; width:calc(100% / 5); height:43rem; background:#fff; z-index:10;}
+.gnb > li a{display:inline-flex; justify-content:center; align-items:center; padding:0 0 1rem; width:100%; height:6.5rem; font-size:inherit; text-align:center;}
+
+.gnb .gnb-depth2{display:none; position:absolute; top:6.5rem; width:100%; height:43rem; padding-top:2rem; background:#fff; z-index:10;}
 .gnb.active .gnb-depth2{display:block;}
-.gnb .gnb-depth2:after{content:''; display:inline-block; position:absolute; top:0; width:.1rem; height:calc(100% - 1rem); background:#DFE3EB;}
-.gnb > li:nth-of-type(1) .gnb-depth2{left:0;}
-.gnb > li:nth-of-type(2) .gnb-depth2{left:calc(100% / 5 * 1);}
-.gnb > li:nth-of-type(3) .gnb-depth2{left:calc(100% / 5 * 2);}
-.gnb > li:nth-of-type(4) .gnb-depth2{left:calc(100% / 5 * 3);}
-.gnb > li:nth-of-type(5) .gnb-depth2{left:calc(100% / 5 * 4);}
 .gnb .gnb-depth2 li{font-weight:400; font-size:var(--font-size-18);}
 .gnb .gnb-depth2 li.tit{padding-bottom:0; color:#fff; font-weight:700; font-size:var(--font-size-20); background-color:#034EA1;}
 .gnb > li:last-child .gnb-depth2 li.tit{border-right:none;}
-.gnb .gnb-depth2 li.tit + li{margin-top:1rem;}
-.gnb .gnb-depth2 li a{height:5rem; padding:0;}
-.gnb .gnb-depth2 li:not(.tit):hover > a{color:#034EA1; font-weight:700; text-decoration:underline; text-underline-offset:.5rem;}
+.gnb .gnb-depth2 li a{height:6rem; padding:0 1rem;}
+.gnb .gnb-depth2 > li:first-child a{height:4.8rem;}
+.gnb .gnb-depth2 > li > a .txt{position:relative;}
+.gnb .gnb-depth2 > li > a .txt::after{content:''; display:inline-block; position:absolute; bottom:-.2rem; left:50%; width:0; height:.1rem; background:#009BB4; transform:translateX(-50%); transition:all .3s ease;}
+
+.gnb .gnb-depth2 > li:hover > a .txt{color:#009BB4; font-weight:700;}
+.gnb .gnb-depth2 > li:hover > a .txt::after{width:100%;}
+
+
+
+
 .gnb .gnb-depth3{position:relative; width:80%; margin:1rem auto 0; padding:1rem 0; background:#E8F2FF; border-radius:1rem;}
 .gnb .gnb-depth3::before{content:''; display:inline-block; position:absolute; top:-3rem; left:50%; transform:translateX(-50%); border-top:1.7rem solid transparent; border-right:1rem solid transparent; border-bottom:1.7rem solid #E8F2FF; border-left:1rem solid transparent;}
 .gnb .gnb-depth3 li a{height:4rem;}
@@ -227,23 +229,21 @@ body.modal-open{height:100vh; overflow:hidden;}
 .cmp-modal .modal-container.find .modal-footer .btn{max-width:32rem;}
 
 @media screen and (max-width:1600px) {
-    .gnb > li a{padding:0 3rem;}    
+    .gnb > li > a{padding:0 3rem;}
     header .head-inner nav .btn-mnu{top:2.3rem;}
 }
 
 @media screen and (max-width:1440px) {
-    .top-noti p{justify-content:flex-start;}
-    .top-noti .icon-toryani{right:10rem;}
-    .top-noti .btn-close{right:2rem;}
-    .gnb > li a{padding:1rem;}
-
+    header{gap:2rem; padding:0 1.6rem;}
+    header .head-inner nav{gap:2rem;}
+    .gnb > li > a{padding:0 1rem;}
     .footer-banner-slider .swiper{width:calc(100% - 8rem);}
     .footer-cont .link-area{height:auto;}
-
 }
 
 
 @media screen and (max-width:1024px) {
+    .gnb.active .gnb-depth2{display:none;}
     .mo-only{display:inline-flex;}
     colgroup.mo-only{display:table-column-group;}
     tbody.mo-only{display:table-row-group;}
