--- a/css/reset.css
+++ b/css/reset.css
@@ -437,7 +437,7 @@ a {
 
 button{padding:0; border:0; background:0; outline:0; cursor:pointer;}
 
-html,body{margin: 0; padding: 0; color: #121212; font-size: 62.5%; font-family: "Pretendard";}
+html,body{height:100vh; margin: 0; padding: 0; color: #121212; font-size: 62.5%; font-family: "Pretendard";}
 body *{font-family: inherit; font-style: normal; -webkit-text-size-adjust: none; font-size:inherit;}
 input{background-color:#f1f3f8;}
 input:focus,
