--- a/css/content.css
+++ b/css/content.css
@@ -135,7 +135,11 @@
 .tab-container.sub .tab-content.is-active{display:block;}
 .tab-container.sub .tab-content p{font-size:1.8rem;}
 .tab-container.sub .tab-content .info-txt{min-height:13rem; margin-bottom:5rem; font-weight:500; line-height:160%;}
+
 .tab-container.sub.has-img{background:url(../images/common/img_AI.webp) right top / 32.7rem 30.9rem no-repeat;}
+.tab-container.sub.has-img.farm{background:url(../images/common/img_farm.webp) right top 6rem / 32.3rem 24.9rem no-repeat;}
+
+
 .tab-container.sub.has-img .tab-head{width:65%;}
 .acco-wrap .list li{position:relative; background:#fff; border-radius:2rem;}
 .acco-wrap .list li + li{margin-top:1rem;}
@@ -143,16 +147,23 @@
 .acco-wrap .list li .badge{display:inline-block; height:3.6rem; padding:.2rem 1.8rem; color:#fff; font-weight:500; line-height:160%; font-size:2rem; background:#9C9C9C; border-radius:1.8rem;}
 .acco-wrap .list li .tit{font-weight:700; line-height:160%; font-size:2.4rem;}
 .acco-wrap .list li .icon-arrow{display:inline-block; position:absolute; top:50%; right:4rem;  width:2rem; height:1.2rem; margin-top:-.6rem; background:url(../images/common/icon_bbs_arrow.svg) center center / 100% no-repeat;}
-.acco-wrap .list-answer{display:none; padding:0 4rem 7rem;}
+.acco-wrap .list-answer{display:none; padding:0 4rem 5rem;}
 .bg-box{display:flex; gap:8rem; align-items:center; padding:2.7rem 5rem; background:rgba(227, 229, 234, 0.5); border-radius:1rem;}
-.bg-box dt{color:#009BB4; font-weight:700; font-size:2rem;}
+.bg-box dt{flex:0 0 auto; color:#009BB4; font-weight:700; font-size:2rem;}
 .bg-box dd{position:relative; font-weight:400; font-size:1.8rem;}
-.bg-box dd::before{content:''; display:inline-block; position:absolute; top:0; left:-4rem; width:.1rem; height:2.6rem; background:rgba(128, 129, 131, 0.5);}
+.bg-box dd::before{content:''; display:inline-block; position:absolute; top:50%; left:-4rem; width:.1rem; height:2.6rem; background:rgba(128, 129, 131, 0.5); transform:translateY(-50%);}
 .acco-wrap .bg-box + .list-txt{margin-top:4rem;}
 .list-txt + .list-txt{margin-top:2rem;}
 .list-txt{display:flex;}
 .list-txt dt{flex:0 0 auto; width:17rem; padding:.5rem 0; font-weight:700; line-height:120%; font-size:2rem;}
 .list-txt dd{flex-grow:1; line-height:160%; font-size:1.8rem;}
+
+.list-txt.type02{flex-wrap:wrap; row-gap:1rem; padding:2rem 0 0; border-top:.1rem solid #D9D9D9;}
+.list-txt.type02 dt{flex:0 0 auto; min-width:15rem; color:#009BB4; line-height:2.2rem; font-size:1.4rem;}
+.list-txt.type02 dd{flex-grow:1; width:calc(100% - 20rem);}
+.list-txt.type02 dd .point{font-weight:700; line-height:2.9rem;}
+
+
 
 .acco-wrap .list li.on .list-answer{display:block}
 .acco-wrap .list li.on .badge{background:#003B90;}
@@ -265,9 +276,17 @@
 .box-list.emergency li img + .txt{margin-top:2.7rem;}
 .box-list.emergency li .txt{display:block; width:100%; font-weight:500; line-height:140%; font-size:1.8rem; text-align:center;}
 
+.bg-box + .h4-title{margin-top:4rem;}
+
+
 /* title */
 .h3-title{position:relative; margin-bottom:2.5rem; font-weight:700; font-size:3rem;}
 .h3-title .icon-h3{position:relative; top:-1.2rem; width:1.2rem; height:1.4rem; margin-right:.9rem;}
+.h4-title{margin-bottom:1.5rem; font-weight:700; line-height:2.4rem; font-size:2rem;}
+
+/* farm */
+.farm .wh-box{padding:2rem; text-align:center; box-shadow:0 0 2rem 0 rgba(0, 0, 0, .1);}
+.farm .wh-box .title{font-weight:700; line-height:3.8rem; font-size:2rem;}
 
 /* etc */
 .bullet{position:relative; padding-left:1.5rem;}
